// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csf-parameters story propery name 1`] = `
Object {
  "components": Object {},
  "kinds": Object {},
  "stories": Object {
    "myStory": Object {
      "arguments": Array [],
      "loc": Object {
        "end": Object {
          "column": 31,
          "line": 1,
        },
        "start": Object {
          "column": 23,
          "line": 1,
        },
      },
      "name": "Custom story name",
      "parameters": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 27,
              "line": 3,
            },
            "start": Object {
              "column": 2,
              "line": 3,
            },
          },
          "name": "name",
          "value": "Custom story name",
        },
      ],
      "source": "() => {}",
    },
  },
}
`;

exports[`csf-parameters story propery name and parameters 1`] = `
Object {
  "components": Object {},
  "kinds": Object {},
  "stories": Object {
    "myStory": Object {
      "arguments": Array [],
      "loc": Object {
        "end": Object {
          "column": 31,
          "line": 1,
        },
        "start": Object {
          "column": 23,
          "line": 1,
        },
      },
      "name": "Custom story name",
      "parameters": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 27,
              "line": 3,
            },
            "start": Object {
              "column": 2,
              "line": 3,
            },
          },
          "name": "name",
          "value": "Custom story name",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 3,
              "line": 9,
            },
            "start": Object {
              "column": 2,
              "line": 4,
            },
          },
          "name": "parameters",
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 28,
                  "line": 5,
                },
                "start": Object {
                  "column": 4,
                  "line": 5,
                },
              },
              "name": "component",
              "value": "ControlsTable",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 5,
                  "line": 8,
                },
                "start": Object {
                  "column": 4,
                  "line": 6,
                },
              },
              "name": "addonControls",
              "value": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 18,
                      "line": 7,
                    },
                    "start": Object {
                      "column": 6,
                      "line": 7,
                    },
                  },
                  "name": "smart",
                  "value": false,
                },
              ],
            },
          ],
        },
      ],
      "source": "() => {}",
    },
  },
}
`;

exports[`csf-parameters story propery name parameters and controls 1`] = `
Object {
  "components": Object {},
  "kinds": Object {},
  "stories": Object {
    "myStory": Object {
      "arguments": Array [],
      "loc": Object {
        "end": Object {
          "column": 31,
          "line": 1,
        },
        "start": Object {
          "column": 23,
          "line": 1,
        },
      },
      "name": "Custom story name",
      "parameters": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 27,
              "line": 3,
            },
            "start": Object {
              "column": 2,
              "line": 3,
            },
          },
          "name": "name",
          "value": "Custom story name",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 3,
              "line": 16,
            },
            "start": Object {
              "column": 2,
              "line": 4,
            },
          },
          "name": "parameters",
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 5,
                  "line": 12,
                },
                "start": Object {
                  "column": 4,
                  "line": 5,
                },
              },
              "name": "controls",
              "value": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 7,
                      "line": 11,
                    },
                    "start": Object {
                      "column": 6,
                      "line": 6,
                    },
                  },
                  "name": "name",
                  "value": Array [
                    Object {
                      "loc": Object {
                        "end": Object {
                          "column": 31,
                          "line": 7,
                        },
                        "start": Object {
                          "column": 8,
                          "line": 7,
                        },
                      },
                      "name": "type",
                      "value": "ControlTypes.TEXT",
                    },
                    Object {
                      "loc": Object {
                        "end": Object {
                          "column": 21,
                          "line": 8,
                        },
                        "start": Object {
                          "column": 8,
                          "line": 8,
                        },
                      },
                      "name": "label",
                      "value": "Name",
                    },
                    Object {
                      "loc": Object {
                        "end": Object {
                          "column": 21,
                          "line": 9,
                        },
                        "start": Object {
                          "column": 8,
                          "line": 9,
                        },
                      },
                      "name": "value",
                      "value": "Mark",
                    },
                    Object {
                      "loc": Object {
                        "end": Object {
                          "column": 19,
                          "line": 10,
                        },
                        "start": Object {
                          "column": 8,
                          "line": 10,
                        },
                      },
                      "name": "order",
                      "value": 9999,
                    },
                  ],
                },
              ],
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 5,
                  "line": 15,
                },
                "start": Object {
                  "column": 4,
                  "line": 13,
                },
              },
              "name": "addonControls",
              "value": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 18,
                      "line": 14,
                    },
                    "start": Object {
                      "column": 6,
                      "line": 14,
                    },
                  },
                  "name": "smart",
                  "value": false,
                },
              ],
            },
          ],
        },
      ],
      "source": "() => {}",
    },
  },
}
`;
